# FitFeast

./: .gitignore  README.md  compose.yml  package-lock.json
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  entrypoint.sh  manage.py  pyproject.toml  requirements.txt
backend/src/: settings.py
backend/src/api/: admin.py  apps.py  authentication.py  middleware.py  models.py  serializers.py  urls.py  views.py
backend/src/api/migrations/: 0001_initial.py  0002_alter_user_options_alter_user_managers_user_email_and_more.py  0003_meal.py  0004_alter_meal_user.py  0005_meal_image.py  0006_profile.py
backend/src/core/: settings.py  urls.py
backend/src/core/management/commands/: create_admin.py
frontend/: .dockerignore  .env.example  Dockerfile  package-lock.json  package.json
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/auth/: auth.module.css
frontend/src/app/auth/login/: page.tsx
frontend/src/app/auth/signup/: page.tsx
frontend/src/app/home/: home.module.css  page.tsx
frontend/src/app/home/components/: WeeklyChart.tsx
frontend/src/app/meals/new/: page.module.css  page.tsx
frontend/src/app/sample/: page.module.css  page.tsx
frontend/src/app/settings/: page.tsx  settings.module.css
frontend/src/app/signin/: page.module.css  page.tsx
frontend/src/app/signup/: page.tsx
frontend/src/lib/api/: callApi.ts  client.ts  meals.ts
frontend/src/lib/api/auth/: signin.ts  signout.ts  signup.ts  user.ts
frontend/src/types/api/: auth.ts  base.ts  test.ts  testPost.ts
(+8 files in other folders)
